# cronix

./: .env.example  .gitignore  Dockerfile  LICENSE  MIGRATION_NOTIFICATION.md  README.md  UV_GUIDE.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
data/code/: .gitkeep
src/: __init__.py  config.py
src/databases/: __init__.py  db.py
src/middleware/: auth.py
src/models/: __init__.py  schemas.py  tables.py
src/routes/: __init__.py  auth.py  dependencies.py  executions.py  scripts.py  settings.py  stats.py  tasks.py
src/services/: __init__.py  auth.py  dependencies.py  notifiers.py  scheduler.py  scripts.py
src/utils/: __init__.py  logger.py  response.py
web/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: auth.ts  config.ts  executions.ts  index.ts  request.ts  scripts.ts  settings.ts  tasks.ts  types.ts
web/src/components/: CodeEditor.tsx  Layout.tsx  ScriptTreeView.tsx  theme-provider.tsx  theme-toggle.tsx
web/src/components/ui/: CodeEditor.tsx  ScriptTreeView.tsx  confirm-dialog.tsx  dialog.tsx  dropdown-menu.tsx  message.tsx  pagination.tsx  select.tsx  table.tsx  tooltip.tsx
web/src/hooks/: index.ts  useAsync.ts  useDialog.ts  useForm.ts  usePagination.ts
web/src/lib/: components.tsx  helper-components.tsx  message.tsx  radix-components.tsx  simple-wrappers.tsx  ui-primitives.tsx
web/src/pages/: Dashboard.tsx  Executions.tsx  Login.tsx  Scripts.tsx  Settings.tsx  Tasks.tsx  Users.tsx
web/src/utils/: format.ts
