[project]
name = "cronix"
version = "0.1.0"
description = "A lightweight, production-ready task scheduling system based on FastAPI and PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Cronix Team" }
]
keywords = ["fastapi", "scheduler", "cron", "task", "postgresql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi[standard]==0.128.0",
    "sqlalchemy[asyncio]==2.0.45",
    "asyncpg==0.30.0",
    "pydantic-settings==2.1.0",
    "croniter==6.0.0",
    "aiohttp==3.11.11",
    "pyjwt==2.10.1",
    "bcrypt==5.0.0",
    "pyotp==2.9.0",
]

[project.urls]
Homepage = "https://github.com/oxzk/cronix"
Repository = "https://github.com/oxzk/cronix"
Issues = "https://github.com/oxzk/cronix/issues"
